Break out scripts as modules

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- External Scripts -->
-    <script src="openai-tiny.js" defer></script>
-    <script src="fullmoon.js" defer></script>
+    <script type="module" src="openai-tiny.js" defer></script>
+    <script type="module" src="fullmoon.js" defer></script>
 
     <title>fuLLMoon</title>
   </head>
